--- a/style.css
+++ b/style.css
@@ -1,6 +1,9 @@
 :root{
     background-image: url(1568880406_1.jpg);
 }
+
+
+
 a{
     color: white;
     margin: auto;
@@ -10,19 +13,24 @@ a{
     display: block;
 }
 .container{
-   display: grid; 
+
+    display: flex;
+    flex-direction: column;
+
+   /*display: grid; 
    grid-template-columns:10% 40% 40% 10%;/*==1fr 1fr 0.5fr 1fr 2fr 2fr*/
-   grid-template-rows: 1vmin 7vmin 2vmin 5vmin 1vmin 20vmin 10vmin 10vmin repeat(10,20px);
+   /*grid-template-rows: 1vmin 7vmin 2vmin 5vmin 1vmin 20vmin 10vmin 10vmin repeat(10,20px);*/
 }
 
 .choice_bar{/*===================================??????????????======*/
     display: flex;
-    position: relative;
-    float: right;
+    flex-direction: row;
+    /*position: relative;*/
+    /*float: right;*/
     /*grid-column: 1/2;
     grid-row:1/4;*/
     color: white;
-    flex-direction: column;
+    
     z-index: 0;
     /*max-width: 10%;*/
     margin: auto;
@@ -37,10 +45,10 @@ a{
     color: white;
     flex-direction: row;
     justify-content:  space-between;
-    position: absolute;
+    /*position: absolute;
     top: 90%; 
     left: 35%;
-    width: 200px;
+    width: 200px;*/
    
 }  
   .choice{
@@ -65,7 +73,7 @@ grid-column:1 / 10 ;
 }
 .menu{
 grid-column: 1/10;
-grid-row: 2/3;
+grid-row: 2/3;/*2/3*/
 display: flex;
 justify-content: space-between;
 /*max-width: 100vh;
@@ -75,12 +83,20 @@ height: 7vmin;
 }
 
 .but{
-    text-align: center;
-    vertical-align:auto;
-    justify-content:center;
+display: flex;
+flex-direction: column;
+flex-wrap: wrap;
+justify-content:space-around;
+text-align: center;
+
+
+
+    /*text-align: center;
+    vertical-align:baseline;
+    justify-content:center;*/
     border: 1px solid black;
     border-radius: 25px;
-    font-size: 100%;
+    font-size: 4vmin;
     margin-top: auto;
     margin-bottom: auto;
     height: 7vmin;
@@ -109,9 +125,10 @@ height: 7vmin;
 #but_run{
     
     
-    width: 25vmin;
+    width: 75vmin;
     vertical-align: centr;
    margin-left: auto;
+   margin-right: auto;
 }
 #but_stop{
     
@@ -133,9 +150,10 @@ height: 7vmin;
 }
 .out{
     display: flex;
-    grid-column: 2/4;
-    grid-row: 4/5;
-    font-size: 2vw;
+    flex-direction: row;
+    flex-wrap: wrap;
+    text-align: center;
+    font-size: 3vmin;
     color: white;
 
 }
